Mejora cobertura UsuarioServiceTest